nginx/service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: nginx-service
  namespace: wordpress
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx
