nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: wordpress
spec:
  ingressClassName: traefik
  rules:
  - host: wordpress.example.com
    http: 
      paths:
      - path: /   
        pathType: Prefix
        backend:
            service:
              name: wordpress-service
              port:
                number: 80
